--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
+  <package id="AWSSDK.Core" version="3.1.5.0" targetFramework="net451" />
+  <package id="AWSSDK.DynamoDBv2" version="3.1.2.0" targetFramework="net451" />
   <package id="bootstrap" version="3.3.6" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="jQuery" version="2.2.1" targetFramework="net451" />
