--- a/Ilevus/Web.config
+++ b/Ilevus/Web.config
@@ -7,7 +7,9 @@
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><sectionGroup name="jsEngineSwitcher">
+			<section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
+		<section name="msie" type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie" /><section name="v8" type="JavaScriptEngineSwitcher.V8.Configuration.V8Configuration, JavaScriptEngineSwitcher.V8" /></sectionGroup></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Ilevus-20160229033828.mdf;Initial Catalog=aspnet-Ilevus-20160229033828;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -21,12 +23,25 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
-  </system.web>
+  <!-- Uncomment if using IIS 7 Classic Mode, IIS 6, or Mono --><!--
+		<httpHandlers>
+			<add verb="GET" path="*.jsx" type="React.Web.BabelHandlerFactory, React.Web" />
+		</httpHandlers>
+		--></system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
     </modules>
-  </system.webServer>
+  <security>
+			<requestFiltering>
+				<hiddenSegments>
+					<add segment="ClearScript.V8" />
+				</hiddenSegments>
+			</requestFiltering>
+		</security><handlers>
+			<remove name="Babel" />
+			<add name="Babel" verb="GET" path="*.jsx" type="React.Web.BabelHandlerFactory, React.Web" preCondition="integratedMode" />
+		</handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -81,4 +96,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd"><core>
+			<engines>
+				<add name="MsieJsEngine" type="JavaScriptEngineSwitcher.Msie.MsieJsEngine, JavaScriptEngineSwitcher.Msie" />
+			<add name="V8JsEngine" type="JavaScriptEngineSwitcher.V8.V8JsEngine, JavaScriptEngineSwitcher.V8" /></engines>
+		</core></jsEngineSwitcher></configuration>
