--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -5,8 +5,12 @@
   <package id="AWSSDK.DynamoDBv2" version="3.1.2.0" targetFramework="net451" />
   <package id="bootstrap" version="3.3.6" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="JavaScriptEngineSwitcher.Core" version="1.2.4" targetFramework="net451" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="1.4.0" targetFramework="net451" />
+  <package id="JavaScriptEngineSwitcher.V8" version="1.4.1" targetFramework="net451" />
   <package id="jQuery" version="2.2.1" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net451" />
+  <package id="JSPool" version="0.3.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
@@ -26,8 +30,13 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.8.3" targetFramework="net451" />
+  <package id="MsieJavaScriptEngine" version="1.6.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="React.Core" version="2.2.1" targetFramework="net451" />
+  <package id="React.Web" version="2.2.1" targetFramework="net451" />
+  <package id="React.Web.Mvc4" version="2.2.1" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.1.0" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
