--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -216,7 +216,6 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Providers\IlevusPermissionsProvider.cs" />
     <Compile Include="Providers\IlevusOAuthProvider.cs" />
-    <Compile Include="TildeModifyingVPP.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -228,6 +227,8 @@
     <Content Include="app.js" />
     <Content Include="favicon.ico" />
     <Content Include="img\logo.png" />
+    <Content Include="img\ilevus-logo-60px.png" />
+    <Content Include="img\ilevus-logo-white-20px.png" />
     <Content Include="index.html" />
     <Content Include="jsx\Application.jsx" />
     <Content Include="jsx\AppSetup.jsx" />
@@ -237,7 +238,9 @@
     <Content Include="jsx\core\util\DateUtils.jsx" />
     <Content Include="jsx\core\util\Messages.jsx" />
     <Content Include="jsx\core\view\Error.jsx" />
+    <Content Include="jsx\core\view\Home.jsx" />
     <Content Include="jsx\core\view\NotFound.jsx" />
+    <Content Include="jsx\core\view\Search.jsx" />
     <Content Include="jsx\core\view\user\Register.jsx" />
     <Content Include="jsx\core\view\user\Login.jsx" />
     <Content Include="jsx\core\view\user\RecoverPassword.jsx" />
@@ -252,6 +255,10 @@
     <Content Include="jsx\core\widget\Pagination.jsx" />
     <Content Include="jsx\core\widget\Popover.jsx" />
     <Content Include="jsx\core\widget\TopBar.jsx" />
+    <Content Include="jsx\vendor\anvil.js" />
+    <Content Include="jsx\vendor\anvil\collapse.jsx" />
+    <Content Include="jsx\vendor\anvil\tooltip.jsx" />
+    <Content Include="jsx\vendor\anvil\util.jsx" />
     <Content Include="jsx\vendor\daterangepicker.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -272,121 +279,67 @@
     <Content Include="package.json" />
     <Content Include="IdentityDynamoDb.pfx" />
     <None Include="Project_Readme.html" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_alerts.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_background-variant.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_border-radius.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_buttons.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_center-block.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_clearfix.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_forms.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_gradients.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_grid-framework.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_grid.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_hide-text.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_image.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_labels.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_list-group.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_nav-divider.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_nav-vertical-align.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_opacity.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_pagination.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_panels.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_progress-bar.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_reset-filter.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_reset-text.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_resize.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_responsive-visibility.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_size.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_tab-focus.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_table-row.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_text-emphasis.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_text-overflow.scss" />
-    <Content Include="sass\bootstrap\bootstrap\mixins\_vendor-prefixes.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_alerts.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_badges.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_breadcrumbs.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_button-groups.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_buttons.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_carousel.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_close.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_code.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_component-animations.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_dropdowns.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_forms.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_glyphicons.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_grid.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_input-groups.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_jumbotron.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_labels.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_list-group.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_media.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_mixins.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_modals.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_navbar.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_navs.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_normalize.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_pager.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_pagination.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_panels.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_popovers.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_print.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_progress-bars.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_responsive-embed.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_responsive-utilities.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_scaffolding.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_tables.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_theme.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_thumbnails.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_tooltip.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_type.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_utilities.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_variables.scss" />
-    <Content Include="sass\bootstrap\bootstrap\_wells.scss" />
-    <Content Include="sass\bootstrap\_bootstrap-compass.scss" />
-    <Content Include="sass\bootstrap\_bootstrap-mincer.scss" />
-    <Content Include="sass\bootstrap\_bootstrap-sprockets.scss" />
-    <Content Include="sass\bootstrap\_bootstrap.scss" />
-    <Content Include="sass\components\.keep" />
-    <Content Include="sass\components\_action.scss" />
-    <Content Include="sass\components\_breadcrumb.scss" />
-    <Content Include="sass\components\_button.scss" />
-    <Content Include="sass\components\_card.scss" />
-    <Content Include="sass\components\_container.scss" />
-    <Content Include="sass\components\_dropdown.scss" />
-    <Content Include="sass\components\_editabledataview.scss" />
-    <Content Include="sass\components\_emptystate.scss" />
-    <Content Include="sass\components\_error.scss" />
-    <Content Include="sass\components\_form.scss" />
-    <Content Include="sass\components\_gadgetnav.scss" />
-    <Content Include="sass\components\_login.scss" />
-    <Content Include="sass\components\_modal.scss" />
+    <Content Include="sass\anvil-flex.scss" />
+    <Content Include="sass\anvil.scss" />
+    <Content Include="sass\_bootstrap.scss" />
+    <Content Include="sass\_mr.style.scss" />
+    <Content Include="sass\components\_avatar.scss" />
+    <Content Include="sass\components\_button-group.scss" />
+    <Content Include="sass\components\_buttons.scss" />
+    <Content Include="sass\components\_forms.scss" />
+    <Content Include="sass\components\_labels.scss" />
+    <Content Include="sass\components\_media.scss" />
+    <Content Include="sass\components\_nav.scss" />
     <Content Include="sass\components\_navbar.scss" />
-    <Content Include="sass\components\_pagination.scss" />
-    <Content Include="sass\components\_popover.scss" />
-    <Content Include="sass\components\_progressbar.scss" />
-    <Content Include="sass\components\_search.scss" />
-    <Content Include="sass\components\_sidebar.scss" />
-    <Content Include="sass\components\_tab.scss" />
-    <Content Include="sass\components\_table.scss" />
-    <Content Include="sass\components\_toolbar.scss" />
-    <Content Include="sass\default.scss" />
-    <Content Include="sass\dependencies\.keep" />
-    <Content Include="sass\dependencies\mixins\_flexbox.scss" />
-    <Content Include="sass\dependencies\mixins\_spacing.scss" />
-    <Content Include="sass\dependencies\mixins\_text.scss" />
-    <Content Include="sass\dependencies\_bootstrap-variables.scss" />
+    <Content Include="sass\components\_tables.scss" />
+    <Content Include="sass\components\_tooltip.scss" />
+    <Content Include="sass\dependencies\core\_code.scss" />
+    <Content Include="sass\dependencies\core\_grid.scss" />
+    <Content Include="sass\dependencies\core\_images.scss" />
+    <Content Include="sass\dependencies\core\_reboot.scss" />
+    <Content Include="sass\dependencies\core\_type.scss" />
+    <Content Include="sass\dependencies\mixins\_alert.scss" />
+    <Content Include="sass\dependencies\mixins\_background-variant.scss" />
+    <Content Include="sass\dependencies\mixins\_border-radius.scss" />
+    <Content Include="sass\dependencies\mixins\_breakpoints.scss" />
+    <Content Include="sass\dependencies\mixins\_buttons.scss" />
+    <Content Include="sass\dependencies\mixins\_cards.scss" />
+    <Content Include="sass\dependencies\mixins\_center-block.scss" />
+    <Content Include="sass\dependencies\mixins\_clearfix.scss" />
+    <Content Include="sass\dependencies\mixins\_forms.scss" />
+    <Content Include="sass\dependencies\mixins\_gradients.scss" />
+    <Content Include="sass\dependencies\mixins\_grid-framework.scss" />
+    <Content Include="sass\dependencies\mixins\_grid.scss" />
+    <Content Include="sass\dependencies\mixins\_hover.scss" />
+    <Content Include="sass\dependencies\mixins\_image.scss" />
+    <Content Include="sass\dependencies\mixins\_label.scss" />
+    <Content Include="sass\dependencies\mixins\_list-group.scss" />
+    <Content Include="sass\dependencies\mixins\_lists.scss" />
+    <Content Include="sass\dependencies\mixins\_nav-divider.scss" />
+    <Content Include="sass\dependencies\mixins\_navbar-align.scss" />
+    <Content Include="sass\dependencies\mixins\_pagination.scss" />
+    <Content Include="sass\dependencies\mixins\_progress.scss" />
+    <Content Include="sass\dependencies\mixins\_pulls.scss" />
+    <Content Include="sass\dependencies\mixins\_reset-filter.scss" />
+    <Content Include="sass\dependencies\mixins\_reset-text.scss" />
+    <Content Include="sass\dependencies\mixins\_resize.scss" />
+    <Content Include="sass\dependencies\mixins\_screen-reader.scss" />
+    <Content Include="sass\dependencies\mixins\_size.scss" />
+    <Content Include="sass\dependencies\mixins\_tab-focus.scss" />
+    <Content Include="sass\dependencies\mixins\_table-row.scss" />
+    <Content Include="sass\dependencies\mixins\_text-emphasis.scss" />
+    <Content Include="sass\dependencies\mixins\_text-hide.scss" />
+    <Content Include="sass\dependencies\mixins\_text-truncate.scss" />
+    <Content Include="sass\dependencies\utilities\_background.scss" />
+    <Content Include="sass\dependencies\utilities\_responsive.scss" />
+    <Content Include="sass\dependencies\utilities\_spacing.scss" />
+    <Content Include="sass\dependencies\utilities\_utilities.scss" />
     <Content Include="sass\dependencies\_mixins.scss" />
-    <Content Include="sass\dependencies\_scaffolding.scss" />
+    <Content Include="sass\dependencies\_normalize.scss" />
+    <Content Include="sass\dependencies\_print.scss" />
     <Content Include="sass\dependencies\_variables.scss" />
-    <Content Include="sass\materialdesignicons\_bootstrap.scss" />
-    <Content Include="sass\materialdesignicons\_core.scss" />
-    <Content Include="sass\materialdesignicons\_extras.scss" />
-    <Content Include="sass\materialdesignicons\_icons.scss" />
-    <Content Include="sass\materialdesignicons\_materialdesignicons.scss" />
-    <Content Include="sass\materialdesignicons\_path.scss" />
-    <Content Include="sass\materialdesignicons\_variables.scss" />
-    <Content Include="sass\utility\.keep" />
-    <Content Include="sass\utility\_text.scss" />
+    <Content Include="sass\layouts\_page-banner.scss" />
+    <Content Include="sass\layouts\_page-content.scss" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Messages.resx">
