--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -27,18 +27,17 @@
     "url-loader": "^0.5.6"
   },
   "dependencies": {
-    "backbone": "^1.2.3",
-    "blueimp-file-upload": "^9.11.2",
-    "bootstrap": "^3.3.6",
+    "backbone": "^1.3.3",
+    "blueimp-file-upload": "^9.12.4",
     "flux": "^2.1.1",
-    "history": "^1.17.0",
-    "jquery": "^2.1.4",
-    "moment": "^2.10.6",
+    "history": "^2.1.1",
+    "jquery": "^2.2.3",
+    "moment": "^2.13.0",
     "numeral": "^1.5.3",
-    "react": "^0.14.0",
-    "react-bootstrap": "^0.28.0",
-    "react-dom": "^0.14.0",
-    "react-router": "^1.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-maskedinput": "^3.1.3",
+    "react-router": "^2.4.0",
     "string": "^3.3.1",
     "tether": "^1.3.2",
     "underscore": "^1.8.3"
