--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -40,6 +40,7 @@
     "react-router": "^2.4.0",
     "string": "^3.3.1",
     "tether": "^1.3.2",
+    "toastr": "^2.1.2",
     "underscore": "^1.8.3"
   },
   "license": "UNLICENSED",
