Busca pelo nome e cidade do usuário

--- a/Ilevus/Web.Release.config
+++ b/Ilevus/Web.Release.config
@@ -3,6 +3,15 @@
 <!-- For more information on using Web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=301874 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+  <appSettings>
+    <add key="BaseURL" value="https://www.ilevus.com/" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
+    <add key="AWSAccessKey" value="*** Access Key Id ***" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
+    <add key="AWSSecretKey" value="*** Secret Access Key ***" xdt:Locator="Match(key)" xdt:Transform="SetAttributes" />
+  </appSettings>
+  <elcaminoIdentityDynamoDBConfiguration
+    tablePrefix="ilevus_auth_"
+    xdt:Locator="Match(tablePrefix)"
+    xdt:Transform="Replace" />
   <!--
     In the example below, the "SetAttributes" transform will change the value of
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
