--- a/Ilevus/Web.config
+++ b/Ilevus/Web.config
@@ -9,13 +9,11 @@
     <section name="elcaminoIdentityDynamoDBConfiguration" type="ElCamino.AspNet.Identity.Dynamo.Configuration.IdentityConfigurationSection,ElCamino.AspNet.Identity.Dynamo.v2 " />
   </configSections>
   <appSettings>
-    <!--AWS AccessKeys are not needed if you are using the DynamoDB Local Emulator-->
-    <!--Uncomment the AccessKeys section when you connect to a live DynamoDB instance in AWS-->
-    <!--and populate with your key values.-->
-
+    <add key="BaseURL" value="http://localhost:57141/" />
     <add key="AWSAccessKey" value="*** Access Key Id ***" />
     <add key="AWSSecretKey" value="*** Secret Access Key ***" />
   </appSettings>
+  <elcaminoIdentityDynamoDBConfiguration tablePrefix="ilevus_auth_" serviceURL="http://localhost:8000" />
   <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="logs\server.log" />
@@ -33,7 +31,6 @@
       <appender-ref ref="DefaultConsole" />
     </root>
   </log4net>
-  <elcaminoIdentityDynamoDBConfiguration tablePrefix="ilevus_auth_" serviceURL="http://localhost:8000" />
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
