--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
-  <package id="AWSSDK.Core" version="3.1.5.3" targetFramework="net461" />
-  <package id="AWSSDK.DynamoDBv2" version="3.1.4.0" targetFramework="net461" />
+  <package id="AspNet.Identity.MongoDB-2" version="2.0.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
-  <package id="ElCamino.AspNet.Identity.Dynamo.v2" version="2.0.4" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
@@ -27,6 +25,9 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.2.4" targetFramework="net461" />
+  <package id="MongoDB.Driver" version="2.2.4" targetFramework="net461" />
+  <package id="MongoDB.Driver.Core" version="2.2.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
