--- a/Ilevus/Web.config
+++ b/Ilevus/Web.config
@@ -9,6 +9,7 @@
   </configSections>
   <appSettings>
     <add key="BaseURL" value="http://localhost:57141/" />
+    <add key="Env" value="development" />
     <add key="AWSAccessKey" value="*** Access Key Id ***" />
     <add key="AWSSecretKey" value="*** Secret Access Key ***" />
   </appSettings>
